--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-primary">Order Now</button>
+            <!--<button class="btn btn-primary">Order Now</button>-->
         </div>
     </div>
 
@@ -166,7 +166,7 @@
 </header>
 
 <!-- Hero Section with Custom Carousel -->
-<section id="home" class="relative min-h-screen flex items-center justify-center overflow-hidden bg-gray-100 pt-16">
+<section id="home" class="relative flex items-center justify-center overflow-hidden bg-gray-100 pt-16 pb-8 mt-12">
 
   <!-- Carousel Background with Fade Animation -->
   <div id="hero-carousel" class="absolute inset-0 z-0">
